--- a/src/app/admin/account-management/inventory-manager/update-inventory-manager/update-inventory-manager.component.html
+++ b/src/app/admin/account-management/inventory-manager/update-inventory-manager/update-inventory-manager.component.html
@@ -10,10 +10,10 @@
                     </mat-select>
                 </mat-form-field>
             </div>
-            <div class="col-lg-3 col-sm-6 col-12" *ngIf="userData?.roles == 'Super Admin'">
+            <div class="col-lg-3 col-sm-6 col-12" *ngIf="userData?.roles == 'Super Admin' || userData?.roles == 'Company Admin'">
                 <mat-form-field appearance="fill" class="w-100 mb-5">
                     <mat-label>Branch</mat-label>
-                    <mat-select required formControlName="branch_id">
+                    <mat-select required formControlName="branch_id" (selectionChange)="getAllUnits()">
                         <mat-option *ngFor="let item of branchList" [value]="item.id">{{ item.branchTitle }}</mat-option>
                     </mat-select>
                 </mat-form-field>
