--- a/src/app/admin/account-management/account-master/ledger-manager/ledger-manager.component.html
+++ b/src/app/admin/account-management/account-master/ledger-manager/ledger-manager.component.html
@@ -66,7 +66,7 @@
                         </td>
                         <td class="text-right">
                           <span *ngIf="!item.id || (item.id && editLedgerIndex == i)">---</span>
-                          <span *ngIf="item.id && editLedgerIndex != i">{{ item.ending_balance }}</span>
+                          <span *ngIf="item.id && editLedgerIndex != i">{{ item.ending_balance| currency:'':'' }}</span>
                         </td>
                         <td>
                             <mat-slide-toggle  *ngIf="!item.id || (item.id && editLedgerIndex == i)" color="primary" [(ngModel)]="item.isActive"></mat-slide-toggle>
