--- a/src/app/admin/account-management/new-transaction/new-receipt/new-receipt.component.html
+++ b/src/app/admin/account-management/new-transaction/new-receipt/new-receipt.component.html
@@ -1,13 +1,13 @@
-<div [formGroup]="_transact.form">
+<div [formGroup]="transact.form">
     <div class="deatail_wraper mb-15">
         <div class="row">
             <div class="col-md-auto col-sm-6 col-12 order-1">
                 <mat-form-field appearance="fill" class="ew-300">
                     <mat-label>To Account</mat-label>
-                    <mat-select required formControlName="accountId">
-                      <mat-select-filter [placeholder]="'Filter'" [displayMember]="'ledgerName'" [array]="_transact.accountList" (filteredReturn)="_transact.filteredAccountList =$event"></mat-select-filter>
-                      <ng-container *ngFor="let item of _transact.filteredAccountList;">
-                        <mat-option *ngIf="_transact.topAccountExclude.indexOf(item.accountType) < 0" [value]="item.id">{{ item.ledgerName }}</mat-option>
+                    <mat-select required formControlName="accountId" (selectionChange)="transact.checkForDuplicateAccounts()">
+                      <mat-select-filter [placeholder]="'Filter'" [displayMember]="'ledgerName'" [array]="transact.accountList" (filteredReturn)="transact.filteredAccountList =$event"></mat-select-filter>
+                      <ng-container *ngFor="let item of transact.filteredAccountList;">
+                        <mat-option *ngIf="transact.topAccountExclude.indexOf(item.accountType) < 0" [value]="item.id">{{ item.ledgerName }}</mat-option>
                       </ng-container>
                     </mat-select>
                   </mat-form-field>
@@ -24,10 +24,10 @@
                     <mat-datepicker #picker></mat-datepicker>
                 </mat-form-field>
             </div>
-            <div class="col-md-auto ml-auto col-sm-6 col-12 order-0 order-sm-3" *ngIf="_transact.form.get('transactionRefNumber').value">
+            <div class="col-md-auto ml-auto col-sm-6 col-12 order-0 order-sm-3" *ngIf="transact.form.get('transactionRefNumber').value">
                 <div class="d-inline-flex align-items-center text-primary font-1_6">
                     <span>Ref. No :</span>
-                    {{ _transact.form.get('transactionRefNumber').value }}
+                    {{ transact.form.get('transactionRefNumber').value }}
                     <!-- <div class="custom_input ew-60 d-md-inline-block">
                         <input type="text" class="w-100">
                         <span class="underline"></span>
@@ -44,7 +44,7 @@
     <ng-container>
         <div class="d-flex align-items-center justify-content-between mt-20">
             <h3 class="title_h3 font-weight-500 mb-5 text-primary">Summary</h3>
-            <button type="button" (click)="_transact.addAnotherAccount()" mat-button>
+            <button type="button" (click)="transact.addAnotherAccount()" mat-button>
                 <img src="assets/images/icons/ADD.svg" alt="" class="icon_img"> Add
             </button>
         </div>
@@ -53,38 +53,41 @@
                 <div class="table-responsive mt-10">
                     <table class="table account_table">
                         <tbody formArrayName="accounts">
-                            <ng-container *ngFor="let account of _transact.accounts['controls'];let i=index;">
+                            <ng-container *ngFor="let account of transact.accounts['controls'];let i=index;">
                                 <ng-container *ngIf="!account.get('deletedFlag').value">
-                                    <tr *ngIf="_transact.editAccountIndex != i else editAccountMode">
+                                    <tr *ngIf="transact.editAccountIndex != i else editAccountMode">
                                         <td class="ew-50"></td>
                                         <td>
-                                            <a href="javascript:;" class="text-reset" (click)="_transact.onEditAccountClick(i)">{{account.get('account').value.ledgerName}}</a>
+                                            <a href="javascript:;" class="text-reset" (click)="transact.onEditAccountClick(i)">{{account.get('account').value.ledgerName}}</a>
                                         </td>
                                         <td class="ew-150"></td>
                                         <td class="ew-150">
-                                            {{ account.get('amountValue').value }}
-                                            <span class="d-inline-block ml-5">
+                                            <span class="d-inline-block mr-5">
                                               &#8377;
                                             </span>
+                                            {{ account.get('amountValue').value | currency : "":"" }}
                                         </td>
                                         <td class="ew-150">
-                                            {{ account.get('totalAmount').value }}
+                                            <span class="d-inline-block mr-5">
+                                              &#8377;
+                                            </span>
+                                            {{ account.get('totalAmount').value | currency : "":"" }}
                                         </td>
                                     </tr>
                                     <ng-template #editAccountMode>
                                         <tr [formGroupName]="i">
                                             <td class="ew-50">
-                                                <button mat-icon-button class="small_icon_btn" color="warn" type="button" (click)="_transact.onDeleteAccount(i)">
-                                                    <!-- <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img"> -->
-                                                    <img src="assets/images/icons/EDIT.svg" alt="" class="icon_img">
+                                                <button mat-icon-button class="small_icon_btn" color="warn" type="button" (click)="transact.onDeleteAccount(i)">
+                                                     <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">
+<!--                                                    <img src="assets/images/icons/EDIT.svg" alt="" class="icon_img">-->
                                                 </button>
                                             </td>
                                             <td>
                                                 <mat-form-field class="field-pb-0 table_select ew-mn-300">
-                                                    <mat-select formControlName="account">
+                                                    <mat-select formControlName="account"  placeholder="From Account">
                                                         <mat-option></mat-option>
-                                                        <ng-container *ngFor="let item of _transact.filteredExpenseAccountList;">
-                                                            <mat-option *ngIf="_transact.taxAndExpenseExclude.indexOf(item.accountType) < 0" [value]="item">{{ item.ledgerName }}</mat-option>
+                                                        <ng-container *ngFor="let item of transact.filteredExpenseAccountList;">
+                                                            <mat-option *ngIf="transact.taxAndExpenseExclude.indexOf(item.accountType) < 0 && transact.form.get('accountId').value != item.id" [value]="item">{{ item.ledgerName }}</mat-option>
                                                         </ng-container>
                                                     </mat-select>
                                                   </mat-form-field>
@@ -94,9 +97,9 @@
 
                                                 <mat-form-field class="field-pb-0 table_select ew-150">
                                                     <input matInput formControlName="amountValue">
-                                                    <span matSuffix class="suffix_text cursor-pointer">
-                                                      &#8377;
-                                                    </span>
+<!--                                                    <span matSuffix class="suffix_text cursor-pointer">-->
+<!--                                                      &#8377;-->
+<!--                                                    </span>-->
                                                 </mat-form-field>
                                             </td>
                                             <td class="ew-150">
@@ -108,7 +111,7 @@
                                     </ng-template>
                                 </ng-container>
                             </ng-container>
-                            <tr *ngIf="_transact.accounts['controls'].length == 0">
+                            <tr *ngIf="transact.accounts['controls'].length == 0">
                                 <td colspan="5">
                                     No entry added
                                 </td>
@@ -139,7 +142,12 @@
                             </tr> -->
                             <tr class="total_row">
                                 <td colspan="4" class="text-right">Grand Total</td>
-                                <td class="ew-180">{{ _transact.totalHandler.transactionGrandTotal }}</td>
+                                <td class="ew-180">
+                                  <span class="d-inline-block mr-5">
+                                    &#8377;
+                                  </span>
+                                  {{ transact.totalHandler.transactionGrandTotal | currency : "":"" }}
+                                </td>
                             </tr>
                         </tbody>
                     </table>
@@ -155,7 +163,7 @@
         </mat-form-field>
     </div>
     <div class="footer_acc_section d-flex justify-content-end">
-        <button type="button" mat-raised-button color="primary" [disabled]="_transact.form.invalid" (click)="_transact.saveFinaldata()">Save</button>
+        <button type="button" mat-raised-button color="primary" [disabled]="transact.form.invalid" (click)="transact.saveFinaldata()">Save</button>
     </div>
 
 </div>
